--- a/index.html
+++ b/index.html
@@ -584,14 +584,14 @@
               <div class=w-full>
                 <h3 class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">Education</h3>
                 <ol class="relative border-s border-gray-200 dark:border-gray-700">
-                  <li class="mb-10 ms-6"><span style="background-color: rgb(10, 62, 211);"
+                  <li class="mb-10 ms-6"><!-- <span style="background-color: rgb(10, 62, 211);"
                       class="absolute flex items-center justify-center w-6 h-6 bg-primary-100 rounded-full -start-3 ring-8 ring-white dark:ring-gray-900 dark:bg-primary-900"><svg
                         fill="currentcolor" viewbox="0 0 256 256"
                         class="w-5 h-5 text-primary-800 dark:text-primary-300">
                         <path
                           d="M251.76 88.94l-120-64a8 8 0 00-7.52.0l-120 64a8 8 0 000 14.12L32 117.87v48.42a15.91 15.91.0 004.06 10.65C49.16 191.53 78.51 216 128 216a130 130 0 0048-8.76V240a8 8 0 0016 0V199.51a115.63 115.63.0 0027.94-22.57A15.91 15.91.0 00224 166.29V117.87l27.76-14.81a8 8 0 000-14.12zM128 2e2c-43.27.0-68.72-21.14-80-33.71V126.4l76.24 40.66a8 8 0 007.52.0L176 143.47v46.34C163.4 195.69 147.52 2e2 128 2e2zm80-33.75a97.83 97.83.0 01-16 14.25V134.93l16-8.53zm-20-47.31-.22-.13-56-29.87a8 8 0 00-7.52 14.12L171 128l-43 22.93L25 96 128 41.07 231 96z">
                         </path>
-                      </svg></span>
+                      </svg></span> -->
                     <h3 class="flex items-center mb-1 text-lg font-semibold text-gray-900 dark:text-white">
                       <!--     PhD Artificial Intelligence</h3><span 
                                     class="block mb-2 text-sm font-normal leading-none text-gray-500 dark:text-gray-300"> -Stanford 
