--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
                           d="M251.76 88.94l-120-64a8 8 0 00-7.52.0l-120 64a8 8 0 000 14.12L32 117.87v48.42a15.91 15.91.0 004.06 10.65C49.16 191.53 78.51 216 128 216a130 130 0 0048-8.76V240a8 8 0 0016 0V199.51a115.63 115.63.0 0027.94-22.57A15.91 15.91.0 00224 166.29V117.87l27.76-14.81a8 8 0 000-14.12zM128 2e2c-43.27.0-68.72-21.14-80-33.71V126.4l76.24 40.66a8 8 0 007.52.0L176 143.47v46.34C163.4 195.69 147.52 2e2 128 2e2zm80-33.75a97.83 97.83.0 01-16 14.25V134.93l16-8.53zm-20-47.31-.22-.13-56-29.87a8 8 0 00-7.52 14.12L171 128l-43 22.93L25 96 128 41.07 231 96z">
                         </path>
                       </svg></span>
-                    <h3 class="flex items-center mb-1 text-lg font-semibold text-gray-900 dark:text-white">
+                    <!-- <h3 class="flex items-center mb-1 text-lg font-semibold text-gray-900 dark:text-white">
                       Bng Software Engineering</h3><span
                       class="block mb-2 text-sm font-normal leading-none text-gray-500 dark:text-gray-300">Zhengzhou
                       University of Light Industry, Zhengzhou, China</span>
@@ -691,35 +691,36 @@
                       <ul>
                         <li>Object-Oriented Programming</li>
                         <li>Software Engineering Principles</li>
-                        <li>Artificial Intelligence Fundamentals</li>
-                      </ul>
-                    </div>
-                  </li>
-                </ol>
+                        <li>Artificial Intelligence Fundamentals</li> -->
+
+                    </ul>
               </div>
+              </li>
+              </ol>
             </div>
           </div>
-        </section>
-        <hr class="w-1/2 mb-10 h-[1px] bg-[var(--c-sep)] mr-1/2">
-        <div class="flex flex-row items-center gap-2 text-[var(--c-50)]">
-          <iconify-icon width="28" icon="mingcute:star-fill"></iconify-icon>
-          <p class="text-center text-3xl">Featured Posts</p>
-        </div>
       </div>
+      </section>
+      <hr class="w-1/2 mb-10 h-[1px] bg-[var(--c-sep)] mr-1/2">
+      <div class="flex flex-row items-center gap-2 text-[var(--c-50)]">
+        <iconify-icon width="28" icon="mingcute:star-fill"></iconify-icon>
+        <p class="text-center text-3xl">Featured Posts</p>
+      </div>
+    </div>
 
-      <!-- List of featured posts -->
-      <!-- List of featured posts -->
-      <section class="px-2 py-8 max-w-prose mx-auto gap-4 grid grid-cols-1">
+    <!-- List of featured posts -->
+    <!-- List of featured posts -->
+    <section class="px-2 py-8 max-w-prose mx-auto gap-4 grid grid-cols-1">
 
-        <!-- Sort posts by date -->
+      <!-- Sort posts by date -->
 
 
 
-        <!-- Large text showing the year in the background -->
+      <!-- Large text showing the year in the background -->
 
-        <div class="relative pointer-events-none h-[30px] -z-50">
-          <div class="absolute -top-6 w-[100%]">
-            <p class="
+      <div class="relative pointer-events-none h-[30px] -z-50">
+        <div class="absolute -top-6 w-[100%]">
+          <p class="
               text-clip
               overflow-hidden
               text-9xl
@@ -729,53 +730,53 @@
               dark:opacity-20
               -translate-x-3
               ">
-              2024
-            </p>
-          </div>
+            2024
+          </p>
         </div>
+      </div>
 
-        <!-- The post -->
-        <div class="w-full">
-          <!-- One post item in a list -->
-          <div class="
+      <!-- The post -->
+      <div class="w-full">
+        <!-- One post item in a list -->
+        <div class="
       post-container
       px-2 py-2
       flex flex-col gap-3">
-            <div class="flex flex-row gap-4">
+          <div class="flex flex-row gap-4">
 
-              <div class="flex flex-col gap-1">
-                <!-- Post title -->
-                <a href="https://ieeexplore.ieee.org/document/10419242/">
-                  <h2 class="
+            <div class="flex flex-col gap-1">
+              <!-- Post title -->
+              <a href="https://ieeexplore.ieee.org/document/10419242/">
+                <h2 class="
                           text-[var(--c-80)]
                           font-bold
                           text-xl
                           hover:text-[var(--c-theme)]
                           transition-all
                           hover:underline">
-                    (EREN) Robust and Scalable Model Editing for Large Language Models
-                  </h2>
-                </a>
-                <!-- Post excerpt -->
+                  (EREN) Robust and Scalable Model Editing for Large Language Models
+                </h2>
+              </a>
+              <!-- Post excerpt -->
 
-                <div
-                  class="post-excerpt post-content text-[var(--c-60)] text-sm line-clamp-5 border-b-1 border-[var(--c-sep)]">
-                  <p><a target="_blank" rel="noopener" href="https://ieeexplore.ieee.org/document/10419242/">GitHub</a>
-                    | <a href="https://ieeexplore.ieee.org/document/10419242/">Paper (upcoming)</a></p>
-                  <p><strong>TL;DR</strong>: A reader is augmented with a growing notebook that caches all edits in
-                    natural texts, and the reader retrieves relevant edits and make inference based on them. This
-                    achieves SOTA in model editing in QA and fact-checking.</p>
-                </div>
-
+              <div
+                class="post-excerpt post-content text-[var(--c-60)] text-sm line-clamp-5 border-b-1 border-[var(--c-sep)]">
+                <p><a target="_blank" rel="noopener" href="https://ieeexplore.ieee.org/document/10419242/">GitHub</a>
+                  | <a href="https://ieeexplore.ieee.org/document/10419242/">Paper (upcoming)</a></p>
+                <p><strong>TL;DR</strong>: A reader is augmented with a growing notebook that caches all edits in
+                  natural texts, and the reader retrieves relevant edits and make inference based on them. This
+                  achieves SOTA in model editing in QA and fact-checking.</p>
               </div>
+
             </div>
-
           </div>
+
         </div>
+      </div>
 
 
 
-      </section>
+    </section>
 
 
 
