--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                           hover:text-[var(--c-theme)]
                           transition-all
                           hover:underline">
-                  (EREN) Robust and Scalable Model Editing for Large Language Models
+                  Net-GPT: A LLM-Empowered Man-in-the-Middle Chatbot for Unmanned Aerial Vehicle
                 </h2>
               </a>
               <!-- Post excerpt -->
