--- a/index.html
+++ b/index.html
@@ -774,6 +774,59 @@
         </div>
       </div>
 
+      <!-- 添加 2023 年的背景文字 -->
+      <div class="relative pointer-events-none h-[30px] -z-50">
+        <div class="absolute -top-6 w-[100%]">
+          <p class="
+          text-clip
+          overflow-hidden
+          text-9xl
+          font-extrabold
+          text-[var(--c-theme)]
+          opacity-10
+          dark:opacity-20
+          -translate-x-3
+          ">
+            2023
+          </p>
+        </div>
+      </div>
+
+      <!-- 添加 2023 年的新论文条目 -->
+      <div class="w-full">
+        <div class="
+      post-container
+      px-2 py-2
+      flex flex-col gap-3">
+          <div class="flex flex-row gap-4">
+
+            <div class="flex flex-col gap-1">
+              <!-- 新论文标题 -->
+              <a href="https://example.com/2023-paper">
+                <h2 class="
+                      text-[var(--c-80)]
+                      font-bold
+                      text-xl
+                      hover:text-[var(--c-theme)]
+                      transition-all
+                      hover:underline">
+                  Net-GPT: A LLM-Empowered Man-in-the-Middle Chatbot for Unmanned Aerial Vehicle 2023
+                </h2>
+              </a>
+              <!-- 新论文简介 -->
+              <div
+                class="post-excerpt post-content text-[var(--c-60)] text-sm line-clamp-5 border-b-1 border-[var(--c-sep)]">
+                <p><a target="_blank" rel="noopener" href="https://github.com/example-2023">GitHub</a>
+                  | <a href="https://example.com/2023-paper">Paper</a></p>
+                <p><strong>TL;DR</strong>: This paper discusses advancements in 2023 related to artificial intelligence
+                  and its application in network security and UAV systems.</p>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
 
 
     </section>
