--- a/index.html
+++ b/index.html
@@ -701,11 +701,22 @@
           </div>
       </div>
       </section>
-      <hr class="w-1/2 mb-10 h-[1px] bg-[var(--c-sep)] mr-1/2">
+      <!--<hr class="w-1/2 mb-10 h-[1px] bg-[var(--c-sep)] mr-1/2">
       <div class="flex flex-row items-center gap-2 text-[var(--c-50)]">
         <iconify-icon width="28" icon="mingcute:star-fill"></iconify-icon>
         <p class="text-center text-3xl">Featured Posts</p>
+      </div> -->
+
+      <!-- 分割线 -->
+      <hr class="w-1/2 mb-10 h-[1px] bg-[var(--c-sep)] mx-auto">
+
+      <!-- Featured Posts 标题 -->
+      <div class="flex flex-col items-center gap-2 text-[var(--c-50)]">
+        <iconify-icon width="28" icon="mingcute:star-fill"></iconify-icon>
+        <p class="text-3xl font-bold">Featured Posts</p>
       </div>
+
+
     </div>
 
     <!-- List of featured posts -->
