--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
       </div>
 
       <!-- 添加 2023 年的背景文字 -->
-      <div class="relative pointer-events-none h-[30px] -z-50">
+      <div class="relative pointer-events-none h-[30px] -z-50 mb-12">
         <div class="absolute -top-6 w-[100%]">
           <p class="
           text-clip
@@ -933,9 +933,9 @@
     </div>
     <!-- powered by -->
     <div class="flex items-center gap-1">
-      <span>Powered by</span>
+      <!--  <span>Powered by</span>
       <a class="hover:underline" href="https://hexo.io/" target="_blank" rel="noopener noreferrer">Hexo</a>
-      <span>&</span>
+      <span>&</span> -->
       <a href="https://github.com/Guohuan-Feng" class="hover:underline" target="_blank" rel="noopener noreferrer">
 
       </a>
