--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                         </path>
                       </svg></span>
                     <h3 class="flex items-center mb-1 text-lg font-semibold text-gray-900 dark:text-white text-wrap">
-                      Software Developer Intern112345</h3><span
+                      Software Developer Intern</h3><span
                       class="block mb-2 text-sm font-normal leading-none text-gray-500 dark:text-gray-300">StartNation
                       Inc.</span>
                     <time class="block mb-3 text-sm font-normal leading-none text-gray-500 dark:text-gray-300">March
@@ -786,7 +786,7 @@
       </div>
 
       <!-- 添加 2023 年的背景文字 -->
-      <div class="relative pointer-events-none h-[30px] -z-50 mb-12">
+      <div class="relative pointer-events-none h-[30px] -z-50 ">
         <div class="absolute -top-6 w-[100%]">
           <p class="
           text-clip
