--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
       <!-- Featured Posts 标题 -->
       <div class="flex flex-col items-center gap-2 text-[var(--c-50)]">
         <iconify-icon width="28" icon="mingcute:star-fill"></iconify-icon>
-        <p class="text-3xl font-bold">Featured Posts</p>
+        <p class="text-3xl font-bold">Featured Pubulications</p>
       </div>
 
 
