--- a/about.html
+++ b/about.html
@@ -510,8 +510,7 @@
       </header>
       <!-- content -->
       <article class="post-content prose m-auto dark:prose-invert">
-        <img src="static/picture/xiaoba.png"
-          alt="Portrait of Chen Yingfa having lunch in Beijing, taken by Luo Yining.">
+        <img src="static/picture/xiaoba.png" style="width:200px;height:200px;"> alt="xiaoba so cute.">
         <p><iconify-icon icon="mingcute:link-fill"></iconify-icon> Social links:</p>
         <ul>
           <!--
