--- a/about.html
+++ b/about.html
@@ -510,19 +510,16 @@
       </header>
       <!-- content -->
       <article class="post-content prose m-auto dark:prose-invert">
-        <img src="static/picture/xiaoba.png" style="width:200px;height:200px;"> alt="xiaoba so cute.">
+        <img src="static/picture/xiaoba.png" style="width:200px;height:200px;"> <!-- alt="xiaoba so cute."> -->
         <p><iconify-icon icon="mingcute:link-fill"></iconify-icon> Social links:</p>
         <ul>
           <!--
 <li><a target="_blank" rel="noopener" href="https://www.semanticscholar.org/author/Yingfa-Chen/2109274417">Semantic Scholar</a></li>
 -->
           <li><a target="_blank" rel="noopener"
-              href="https://scholar.google.com/citations?user=IgPWvEQAAAAJ&amp;hl=en">Google Scholar</a></li>
-          <li><a target="_blank" rel="noopener" href="https://www.twitter.com/DonnyChan123">X (Twitter)</a></li>
-          <li><a target="_blank" rel="noopener" href="https://www.github.com/chen-yingfa">GitHub</a></li>
-          <li><a target="_blank" rel="noopener" href="https://www.zhihu.com/people/chen-ying-fa-34">知乎</a></li>
-          <li><a target="_blank" rel="noopener"
-              href="https://space.bilibili.com/474619698?spm_id_from=333.1007.0.0">B站</a></li>
+              href="https://scholar.google.com/citations?user=wcs6foEAAAAJ&hl=en">Google Scholar</a></li>
+          <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/guohuanfeng/">Linkedin</a></li>
+          <li><a target="_blank" rel="noopener" href="https://github.com/Guohuan-Feng">GitHub</a></li>
         </ul>
         <p><iconify-icon icon="mingcute:mail-fill"></iconify-icon> Email: (either is ok)</p>
         <ul>
