--- a/about.html
+++ b/about.html
@@ -523,8 +523,8 @@
         </ul>
         <p><iconify-icon icon="mingcute:mail-fill"></iconify-icon> Email: (either is ok)</p>
         <ul>
-          <li><a href="mailto:chenyingfa1999@qq.com">chenyingfa1999@qq.com</a></li>
-          <li><a href="mailto:donnychan1999@gmail.com">donnychan1999@gmail.com</a></li>
+          <li><a href="mailto:gfeng@oakland.edu">gfeng@oakland.edu</a></li>
+          <li><a href="mailto:2890858968a@gmail.com">2890858968a@gmail.com</a></li>
         </ul>
         <hr>
         <p>你好, hello, hei!</p>
