--- a/about.html
+++ b/about.html
@@ -527,11 +527,12 @@
           <li><a href="mailto:2890858968a@gmail.com">2890858968a@gmail.com</a></li>
         </ul>
         <hr>
-        <p>你好, hello, hei!</p>
-        <p>My name is Yingfa Chen (陈英发).</p>
-        <p>I'm a PhD student at the <a target="_blank" rel="noopener" href="http://nlp.csai.tsinghua.edu.cn/">Natural
-            Language Processing lab at Tsinghua University</a>, advised by Prof. Zhiyuan Liu. My research interests are
-          about long-context modeling, RNN-based language models, continual learning.</p>
+        <p>Hello,</p>
+        <p>My name is Guohuan Feng.</p>
+        <p>I am a computer science student at Oakland University, focusing on advanced topics such as edge computing,
+          data center architecture, and intelligent system optimization, where I actively contribute to innovative
+          research and development.
+        </p>
         <p><a href="static/file/cv.pdf"><span class="github-emoji"><span>📄</span><img src="static/picture/1f4c4.png"
                 aria-hidden="true" onerror="this.parent.classList.add('github-emoji-fallback')"></span> My resume (last
             updated: Aug, 2024)</a></p>
