--- a/publications.html
+++ b/publications.html
@@ -508,9 +508,12 @@
         <p><strong>2024</strong>:</p>
         <ul>
           <li>
-            <p>Stuffed Mamba: State Collapse and State Capacity of RNN-Based Long-Context Modeling</p>
+            <a href="static/file/cv.pdf" target="_blank" rel="noopener">
+              <p>Areo-LLM: A Distributed Framework for Secure UAV Communication and Intelligent Decision-Making
+                (ICCCN2024)</p>
+            </a>
             <ul>
-              <li><a target="_blank" rel="noopener" href="https://www.github.com/thunlp/stuffed-mamba">Code</a></li>
+              <li><a target="_blank" rel="noopener" href="static/file/cv.pdf">paper</a></li>
             </ul>
           </li>
           <li>
