--- a/publications.html
+++ b/publications.html
@@ -510,19 +510,21 @@
           <li>
             <!-- content   <a href="static/file/cv.pdf" target="_blank" rel="noopener"> -->
             <p>Areo-LLM: A Distributed Framework for Secure UAV Communication and Intelligent Decision-Making
-              (ICCCN2024)</p>
+            </p>
             </a>
             <ul>
+              <li>ICCCN 2024</li>
               <li><a target="_blank" rel="noopener" href="static/file/ICCCN2024.pdf">paper</a></li>
             </ul>
           </li>
           <li>
             <p>Research on the Application of Binary Classification Dataset Based on Integrated Learning Model</p>
             <ul>
-              <li><a target="_blank" rel="noopener"
-                  href="https://ieeexplore.ieee.org/abstract/document/10709215">Paper</a></li>
-            </ul>
+              <li><a target="_blank" rel="noopener" <li>ICIPCA 2024</li>
+              href="https://ieeexplore.ieee.org/abstract/document/10709215">Paper</a>
           </li>
+        </ul>
+        </li>
         </ul>
         <p><strong>2023</strong>:</p>
         <ul>
