--- a/publications.html
+++ b/publications.html
@@ -520,11 +520,12 @@
           <li>
             <p>Research on the Application of Binary Classification Dataset Based on Integrated Learning Model</p>
             <ul>
-              <li><a target="_blank" rel="noopener" <li>ICIPCA 2024</li>
-              href="https://ieeexplore.ieee.org/abstract/document/10709215">Paper</a>
+              <li>ICIPCA 2024</li>
+              <li><a target="_blank" rel="noopener"
+                  href="https://ieeexplore.ieee.org/abstract/document/10709215">Paper</a>
+              </li>
+            </ul>
           </li>
-        </ul>
-        </li>
         </ul>
         <p><strong>2023</strong>:</p>
         <ul>
