--- a/about.html
+++ b/about.html
@@ -545,14 +545,12 @@
             href="https://www.github.com/luo-yining/">Luo Yining</a><sup class="footnote-ref"><a href="#fn1"
               id="fnref1">[1]</a></sup>.</p>
         <h2 id="Interests">Interests</h2>
-        <p>🏸 Sports: Badminton, running, soccer.</p>
-        <p>🎮 Entertainment: Video games, C-pop, anime, manga, Jackie Cheung, etc.</p>
+        <p>🏸 Sports: Basketball</p>
+        <p>🎮 Entertainment: Video games(League of Legends )</p>
         <hr class="footnotes-sep">
         <section class="footnotes">
           <ol class="footnotes-list">
             <li id="fn1" class="footnote-item">
-              <p>The tag <a href="../../../tags/00">#00</a> refers to my girlfriend. <a href="#fnref1"
-                  class="footnote-backref">↩︎</a></p>
             </li>
           </ol>
         </section>
