--- a/about.html
+++ b/about.html
@@ -547,14 +547,14 @@
         <h2 id="Interests">Interests</h2>
         <p>🏸 Sports: Basketball</p>
         <p>🎮 Entertainment: Video games(League of Legends )</p>
-        <hr class="footnotes-sep">
+        <!--  <hr class="footnotes-sep">
         <section class="footnotes">
           <ol class="footnotes-list">
             <li id="fn1" class="footnote-item">
             </li>
           </ol>
         </section>
-
+      -->
       </article>
 
       <!-- prev and next -->
