--- a/about.html
+++ b/about.html
@@ -536,14 +536,14 @@
         <p><a href="static/file/cv.pdf"><span class="github-emoji"><span>📄</span><img src="static/picture/1f4c4.png"
                 aria-hidden="true" onerror="this.parent.classList.add('github-emoji-fallback')"></span> My resume (last
             updated: Aug, 2024)</a></p>
-        <h2 id="Personal-Background">Personal Background</h2>
+        <!--  <h2 id="Personal-Background">Personal Background</h2>
         <p>I was born in March 13, 1999 in Arendal Norway. I grew up in Lillesand, a small coastal town in Aust-Agder,
           Norway. My parents are ethnically Chinese but born respectively in Vietnam and Cambodia, and they moved to
           Norway as refugees. My mother tongue is Cantonese Chinese.</p>
         <p>When I was 19, I went to Beijing for a Bachelor's degree in Computer Science at Tsinghua University.</p>
         <p>Since March of 2022, I am happily in a relationship with <a target="_blank" rel="noopener"
             href="https://www.github.com/luo-yining/">Luo Yining</a><sup class="footnote-ref"><a href="#fn1"
-              id="fnref1">[1]</a></sup>.</p>
+              id="fnref1">[1]</a></sup>.</p> -->
         <h2 id="Interests">Interests</h2>
         <p>🏸 Sports: Basketball</p>
         <p>🎮 Entertainment: Video games(League of Legends )</p>
