--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                       class="block mb-2 text-sm font-normal leading-none text-gray-500 dark:text-gray-300">Zhengzhou
                       University of Light Industry, Zhengzhou, China</span>
                     <time class="block mb-3 text-sm font-normal leading-none text-gray-500 dark:text-gray-300">August
-                      2020 –
+                      2020
                       May 2024</time>
                     <div
                       class="mb-4 text-base font-normal text-gray-500 dark:text-gray-300 prose prose-slate dark:prose-invert">
@@ -914,12 +914,12 @@
       <div class="flex flex-col items-center mb-2">
         <div class="flex flex-row items-center">
           <iconify-icon width="16" icon="ic:round-person" width="18"></iconify-icon>
-          <span class="mr-1">访客 Visitors: </span>
+          <span class="mr-1">Visitors: </span>
           <span id="busuanzi_value_site_uv"></span>
         </div>
         <div class="flex flex-row items-center">
           <iconify-icon width="16" icon="carbon:view-filled" width="18"></iconify-icon>
-          <span class="mx-1">浏览量 Page Views:</span>
+          <span class="mx-1">Page Views:</span>
           <span id="busuanzi_value_site_pv"></span>
         </div>
       </div>
