--- a/about.html
+++ b/about.html
@@ -664,9 +664,9 @@
     </div>
     <!-- powered by -->
     <div class="flex items-center gap-1">
-      <span>Powered by</span>
+      <!--  <span>Powered by</span> -->
       <a class="hover:underline" href="https://hexo.io/" target="_blank" rel="noopener noreferrer">Hexo</a>
-      <span>&</span>
+      <!--  <span>&</span> -->
       <a href="https://github.com/Guohuan-Feng" class="hover:underline" target="_blank" rel="noopener noreferrer">
 
       </a>
