--- a/publications.html
+++ b/publications.html
@@ -659,14 +659,14 @@
       <a class="hover:underline" href="https://github.com/Guohuan-Feng" target="_blank" rel="noopener noreferrer"></a>
     </div>
     <!-- powered by -->
-    <div class="flex items-center gap-1">
+    <!-- <div class="flex items-center gap-1">
       <span>Powered by</span>
       <a class="hover:underline" href="https://hexo.io/" target="_blank" rel="noopener noreferrer">Hexo</a>
       <span>&</span>
       <a href="https://github.com/Guohuan-Feng" class="hover:underline" target="_blank" rel="noopener noreferrer">
 
       </a>
-    </div>
+    </div> -->
 
   </footer>
 
