--- a/about.html
+++ b/about.html
@@ -665,7 +665,7 @@
     <!-- powered by -->
     <div class="flex items-center gap-1">
       <!--  <span>Powered by</span> -->
-      <a class="hover:underline" href="https://hexo.io/" target="_blank" rel="noopener noreferrer">Hexo</a>
+      <a class="hover:underline" href="https://hexo.io/" target="_blank" rel="noopener noreferrer"></a>
       <!--  <span>&</span> -->
       <a href="https://github.com/Guohuan-Feng" class="hover:underline" target="_blank" rel="noopener noreferrer">
 
