--- a/publications.html
+++ b/publications.html
@@ -187,6 +187,7 @@
                     ">
 
           <iconify-icon class="group-hover:scale-125 transition-transform" icon="mingcute:science-fill" width="22">
+            <span>Publications</span>
           </iconify-icon>
 
 
