--- a/about.html
+++ b/about.html
@@ -238,8 +238,8 @@
                         whitespace-nowrap
                     ">
                   -->
-        <iconify-icon class="group-hover:scale-125 transition-transform" icon="mingcute:classify-2-fill" width="22">
-        </iconify-icon>
+        <!-- <iconify-icon class="group-hover:scale-125 transition-transform" icon="mingcute:classify-2-fill" width="22">  
+        </iconify-icon> -->
 
 
         </a>
