--- a/about.html
+++ b/about.html
@@ -533,9 +533,17 @@
           data center architecture, and intelligent system optimization, where I actively contribute to innovative
           research and development.
         </p>
-        <p><a href="static/file/cv.pdf"><span class="github-emoji"><span>📄</span><img src="static/picture/1f4c4.png"
-                aria-hidden="true" onerror="this.parent.classList.add('github-emoji-fallback')"></span> My resume (last
-            updated: Aug, 2024)</a></p>
+        <p>
+          <a href="static/file/cv.pdf" style="display: inline-flex; align-items: center; gap: 0.5em;">
+            <span class="github-emoji">
+              <span>📄</span>
+              <img src="static/picture/1f4c4.png" alt="document icon"
+                onerror="this.parent.classList.add('github-emoji-fallback')">
+            </span>
+            My resume (last updated: Aug, 2024)
+          </a>
+        </p>
+
         <!--  <h2 id="Personal-Background">Personal Background</h2>
         <p>I was born in March 13, 1999 in Arendal Norway. I grew up in Lillesand, a small coastal town in Aust-Agder,
           Norway. My parents are ethnically Chinese but born respectively in Vietnam and Cambodia, and they moved to
