--- a/about.html
+++ b/about.html
@@ -534,15 +534,13 @@
           research and development.
         </p>
         <p>
-          <a href="static/file/cv.pdf" style="display: inline-flex; align-items: center; gap: 0.5em;">
-            <span class="github-emoji">
-              <span>📄</span>
-              <img src="static/picture/1f4c4.png" alt="document icon"
-                onerror="this.parent.classList.add('github-emoji-fallback')">
+          <a href="static/file/cv.pdf" style="display: inline-flex; align-items: center; gap: 0;">
+            <span style="display: inline-flex; align-items: center;">
+              📄 My resume (last updated: Aug, 2024)
             </span>
-            My resume (last updated: Aug, 2024)
           </a>
         </p>
+
 
         <!--  <h2 id="Personal-Background">Personal Background</h2>
         <p>I was born in March 13, 1999 in Arendal Norway. I grew up in Lillesand, a small coastal town in Aust-Agder,
