--- a/index.html
+++ b/index.html
@@ -542,9 +542,9 @@
                       Software Developer Intern</h3><span
                       class="block mb-2 text-sm font-normal leading-none text-gray-500 dark:text-gray-300">StartNation
                       Inc.</span>
-                    <time class="block mb-3 text-sm font-normal leading-none text-gray-500 dark:text-gray-300">March
+                    <time class="block mb-3 text-sm font-normal leading-none text-gray-500 dark:text-gray-300">May
                       2024 –
-                      June 2024</time>
+                      August 2024</time>
                     <div
                       class="mb-4 text-base font-normal text-gray-500 dark:text-gray-300 text-wrap prose prose-slate dark:prose-invert">
                       <p>Responsibilities include:</p>
@@ -568,7 +568,7 @@
                     <h3 class="flex items-center mb-1 text-lg font-semibold text-gray-900 dark:text-white text-wrap">
                       Grader for CSI-3640</h3><span
                       class="block mb-2 text-sm font-normal leading-none text-gray-500 dark:text-gray-300">Oakland
-                      University (OU)</span>
+                      University</span>
                     <time class="block mb-3 text-sm font-normal leading-none text-gray-500 dark:text-gray-300">January
                       2024 –
                       May 2024</time>
