--- a/index.html
+++ b/index.html
@@ -642,8 +642,8 @@
                       <p>Relevant Courses:</p>
                       <ul>
                         <li>Advanced Web Design & Application</li>
-                        <li>Data Structures and Algorithms</li>
-                        <li>Database Management Systems</li>
+                        <li>Programming Languages</li>
+                        <li>Parallel and Distributed Computing</li>
                       </ul>
                     </div>
                   </li>
@@ -667,9 +667,9 @@
                       <p>GPA: 3.77/5.0; Ranking: 6/485</p>
                       <p>Relevant Courses:</p>
                       <ul>
-                        <li>Object-Oriented Programming</li>
-                        <li>Software Engineering Principles</li>
-                        <li>Artificial Intelligence Fundamentals</li>
+                        <li>Big Data Analysis</li>
+                        <li>Computer Network</li>
+                        <li>Data Structure</li>
                       </ul>
                     </div>
                   </li>
