--- a/index.html
+++ b/index.html
@@ -769,15 +769,16 @@
                           hover:text-[var(--c-theme)]
                           transition-all
                           hover:underline">
-                  Net-GPT: A LLM-Empowered Man-in-the-Middle Chatbot for Unmanned Aerial Vehicle
+                  Aero-LLM: A Distributed Framework for Secure UAV Communication and Intelligent Decision-Making
                 </h2>
               </a>
               <!-- Post excerpt -->
 
               <div
                 class="post-excerpt post-content text-[var(--c-60)] text-sm line-clamp-5 border-b-1 border-[var(--c-sep)]">
-                <p><a target="_blank" rel="noopener" href="https://ieeexplore.ieee.org/document/10419242/">GitHub</a>
-                  | <a href="https://ieeexplore.ieee.org/document/10419242/">Paper (upcoming)</a></p>
+                <p><a target="_blank" rel="noopener"
+                    href="https://github.com/Bapiggott/DatasetCreationAndFineTuning">GitHub</a>
+                  | <a href="https://ieeexplore.ieee.org/document/10419242/">Paper</a></p>
                 <p><strong>TL;DR</strong>: A reader is augmented with a growing notebook that caches all edits in
                   natural texts, and the reader retrieves relevant edits and make inference based on them. This
                   achieves SOTA in model editing in QA and fact-checking.</p>
@@ -831,8 +832,9 @@
               <!-- 新论文简介 -->
               <div
                 class="post-excerpt post-content text-[var(--c-60)] text-sm line-clamp-5 border-b-1 border-[var(--c-sep)]">
-                <p><a target="_blank" rel="noopener" href="https://github.com/example-2023">GitHub</a>
-                  | <a href="https://example.com/2023-paper">Paper</a></p>
+                <p><a target="_blank" rel="noopener"
+                    href="https://github.com/Bapiggott/DatasetCreationAndFineTuning">GitHub</a>
+                  | <a href="https://ieeexplore.ieee.org/document/10419242">Paper</a></p>
                 <p><strong>TL;DR</strong>: This paper discusses advancements in 2023 related to artificial intelligence
                   and its application in network security and UAV systems.</p>
               </div>
