--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
 
             <div class="flex flex-col gap-1">
               <!-- 新论文标题 -->
-              <a href="https://example.com/2023-paper">
+              <a href="https://ieeexplore.ieee.org/abstract/document/10419242">
                 <h2 class="
                       text-[var(--c-80)]
                       font-bold
