--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
 
             <div class="flex flex-col gap-1">
               <!-- Post title -->
-              <a href="https://ieeexplore.ieee.org/document/10419242/">
+              <a href="static/file/ICCCN2024.pdf">
                 <h2 class="
                           text-[var(--c-80)]
                           font-bold
@@ -778,7 +778,7 @@
                 class="post-excerpt post-content text-[var(--c-60)] text-sm line-clamp-5 border-b-1 border-[var(--c-sep)]">
                 <p><a target="_blank" rel="noopener"
                     href="https://github.com/Bapiggott/DatasetCreationAndFineTuning">GitHub</a>
-                  | <a href="https://ieeexplore.ieee.org/document/10419242/">Paper</a></p>
+                  | <a href="static/file/ICCCN2024.pdf">Paper</a></p>
                 <p><strong>TL;DR</strong>: A reader is augmented with a growing notebook that caches all edits in
                   natural texts, and the reader retrieves relevant edits and make inference based on them. This
                   achieves SOTA in model editing in QA and fact-checking.</p>
