--- a/index.html
+++ b/index.html
@@ -779,9 +779,11 @@
                 <p><a target="_blank" rel="noopener"
                     href="https://github.com/Bapiggott/DatasetCreationAndFineTuning">GitHub</a>
                   | <a href="static/file/ICCCN2024.pdf">Paper</a></p>
-                <p><strong>TL;DR</strong>: A reader is augmented with a growing notebook that caches all edits in
-                  natural texts, and the reader retrieves relevant edits and make inference based on them. This
-                  achieves SOTA in model editing in QA and fact-checking.</p>
+                <p><strong>TL;DR</strong>: The paper introduces Aero-LLM, a distributed framework integrating
+                  specialized large language models (LLMs) to enhance UAV communication security and decision-making. By
+                  employing edge, cloud, and onboard computing, the framework ensures efficient anomaly detection and
+                  mission optimization. Aero-LLM leverages supervised fine-tuning and reinforcement learning, achieving
+                  high performance in cybersecurity and operational metrics.</p>
               </div>
 
             </div>
@@ -835,8 +837,11 @@
                 <p><a target="_blank" rel="noopener"
                     href="https://github.com/Bapiggott/DatasetCreationAndFineTuning">GitHub</a>
                   | <a href="https://ieeexplore.ieee.org/document/10419242">Paper</a></p>
-                <p><strong>TL;DR</strong>: This paper discusses advancements in 2023 related to artificial intelligence
-                  and its application in network security and UAV systems.</p>
+                <p><strong>TL;DR</strong>: The paper presents Aero-LLM, a distributed framework utilizing task-specific
+                  LLMs to secure UAV communications and enhance decision-making. Integrating onboard, edge, and cloud
+                  computing, it offers robust anomaly detection and mission optimization. Aero-LLM leverages supervised
+                  fine-tuning and reinforcement learning, achieving superior cybersecurity and performance metrics in
+                  UAV operations.</p>
               </div>
 
             </div>
