--- a/index.html
+++ b/index.html
@@ -779,11 +779,10 @@
                 <p><a target="_blank" rel="noopener"
                     href="https://github.com/Bapiggott/DatasetCreationAndFineTuning">GitHub</a>
                   | <a href="static/file/ICCCN2024.pdf">Paper</a></p>
-                <p><strong>TL;DR</strong>: The paper introduces Aero-LLM, a distributed framework integrating
-                  specialized large language models (LLMs) to enhance UAV communication security and decision-making. By
-                  employing edge, cloud, and onboard computing, the framework ensures efficient anomaly detection and
-                  mission optimization. Aero-LLM leverages supervised fine-tuning and reinforcement learning, achieving
-                  high performance in cybersecurity and operational metrics.</p>
+                <p><strong>TL;DR</strong>: This paper presents Aero-LLM, a framework using task-specific LLMs for secure
+                  UAV communication and decision-making. It employs edge, cloud, and onboard computing to enhance
+                  anomaly detection and mission efficiency through fine-tuned supervised and reinforcement learning.
+                </p>
               </div>
 
             </div>
@@ -837,11 +836,9 @@
                 <p><a target="_blank" rel="noopener"
                     href="https://github.com/Bapiggott/DatasetCreationAndFineTuning">GitHub</a>
                   | <a href="https://ieeexplore.ieee.org/document/10419242">Paper</a></p>
-                <p><strong>TL;DR</strong>: The paper presents Aero-LLM, a distributed framework utilizing task-specific
-                  LLMs to secure UAV communications and enhance decision-making. Integrating onboard, edge, and cloud
-                  computing, it offers robust anomaly detection and mission optimization. Aero-LLM leverages supervised
-                  fine-tuning and reinforcement learning, achieving superior cybersecurity and performance metrics in
-                  UAV operations.</p>
+                <p><strong>TL;DR</strong>:This paper introduces Net-GPT, an LLM-based system for intercepting UAV
+                  communications via MITM attacks. It demonstrates LLM potential in network security through precise
+                  attack simulation and analysis.</p>
               </div>
 
             </div>
