--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
                 <p><a target="_blank" rel="noopener"
                     href="https://github.com/Bapiggott/DatasetCreationAndFineTuning">GitHub</a>
                   | <a href="static/file/ICCCN2024.pdf">Paper</a></p>
-                <p><strong>TL;DR</strong>: This paper presents Aero-LLM, a framework using task-specific LLMs for secure
+                <p>This paper presents Aero-LLM, a framework using task-specific LLMs for secure
                   UAV communication and decision-making. It employs edge, cloud, and onboard computing to enhance
                   anomaly detection and mission efficiency through fine-tuned supervised and reinforcement learning.
                 </p>
@@ -836,7 +836,7 @@
                 <p><a target="_blank" rel="noopener"
                     href="https://github.com/Bapiggott/DatasetCreationAndFineTuning">GitHub</a>
                   | <a href="https://ieeexplore.ieee.org/document/10419242">Paper</a></p>
-                <p><strong>TL;DR</strong>:This paper introduces Net-GPT, an LLM-based system for intercepting UAV
+                <p>This paper introduces Net-GPT, an LLM-based system for intercepting UAV
                   communications via MITM attacks. It demonstrates LLM potential in network security through precise
                   attack simulation and analysis.</p>
               </div>
