--- a/publications.html
+++ b/publications.html
@@ -537,6 +537,8 @@
             <ul>
               <li>ACM/IEEE SEC 2023</li>
               <li><a target="_blank" rel="noopener" href="https://ieeexplore.ieee.org/document/10419242/">Paper</a></li>
+              <li><a target="_blank" rel="noopener"
+                  href="https://github.com/Bapiggott/DatasetCreationAndFineTuning">Github</a></li>
             </ul>
           </li>
           </li>
