--- a/about.html
+++ b/about.html
@@ -366,9 +366,7 @@
             ">
         <iconify-icon icon="mingcute:science-fill" width="22">
         </iconify-icon>
-        <p>
-
-        </p>
+        <p>Publications</p>
       </a>
 
 
