--- a/publications.html
+++ b/publications.html
@@ -172,26 +172,24 @@
 
 
         <a href="publications.html" class="
-                        flex flex-row items-center
-                        gap-1
-                        hover:underline
-                        hover:bg-[var(--c-20)]
-                        hover:text-[var(--c-theme)]
-                        transition-all
-                        px-2
-                        py-1
-                        my-1
-                        rounded-lg
-                        group
-                        whitespace-nowrap
-                    ">
-
-          <iconify-icon class="group-hover:scale-125 transition-transform" icon="mingcute:science-fill" width="22">
-            <span>Publications</span>
-          </iconify-icon>
-
-
+        flex flex-row items-center
+        gap-1
+        hover:underline
+        hover:bg-[var(--c-20)]
+        hover:text-[var(--c-theme)]
+        transition-all
+        px-2
+        py-1
+        my-1
+        rounded-lg
+        group
+        whitespace-nowrap
+    ">
+          <iconify-icon icon="mingcute:science-fill" width="22"
+            class="group-hover:scale-125 transition-transform"></iconify-icon>
+          <span>Publications</span>
         </a>
+
 
 
 
