--- a/index.html
+++ b/index.html
@@ -294,6 +294,8 @@
 
           <iconify-icon class="group-hover:scale-125 transition-transform" icon="mingcute:home-2-fill" width="22">
           </iconify-icon>
+          <span>Home Page</span>
+
 
 
         </a>
@@ -450,9 +452,7 @@
             ">
         <iconify-icon icon="mingcute:home-2-fill" width="22">
         </iconify-icon>
-        <p>
-
-        </p>
+        <span>Home Page</span>
       </a>
 
 
