--- a/about.html
+++ b/about.html
@@ -292,7 +292,7 @@
 
           <iconify-icon class="group-hover:scale-125 transition-transform" icon="mingcute:home-2-fill" width="22">
           </iconify-icon>
-
+          <span>Home Page</span>
 
         </a>
 
@@ -446,9 +446,7 @@
             ">
         <iconify-icon icon="mingcute:home-2-fill" width="22">
         </iconify-icon>
-        <p>
-
-        </p>
+        <span>Home Page</span>
       </a>
 
 
