--- a/publications.html
+++ b/publications.html
@@ -291,8 +291,7 @@
 
           <iconify-icon class="group-hover:scale-125 transition-transform" icon="mingcute:home-2-fill" width="22">
           </iconify-icon>
-
-
+          <span>Home Page</span>
         </a>
 
       </div>
@@ -445,9 +444,7 @@
             ">
         <iconify-icon icon="mingcute:home-2-fill" width="22">
         </iconify-icon>
-        <p>
-
-        </p>
+        <span>Home Page</span>
       </a>
 
 
