--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@
 
           <iconify-icon class="group-hover:scale-125 transition-transform" icon="mingcute:science-fill" width="22">
           </iconify-icon>
-
+          <span>Publications</span>
 
         </a>
 
@@ -214,7 +214,7 @@
 
           <iconify-icon class="group-hover:scale-125 transition-transform" icon="mingcute:user-info-fill" width="22">
           </iconify-icon>
-
+          <span>About Me</span>
 
         </a>
 
@@ -275,7 +275,7 @@
 
 
 
-        <a href="" class="
+        <a href="index.html" class="
                         flex flex-row items-center
                         gap-1
                         hover:underline
@@ -384,9 +384,7 @@
             ">
         <iconify-icon icon="mingcute:user-info-fill" width="22">
         </iconify-icon>
-        <p>
-
-        </p>
+        <span>About Me</span>
       </a>
 
 
@@ -434,7 +432,7 @@
     -->
 
 
-      <a href="" class="
+      <a href="index.html" class="
                 flex flex-row items-center
                 gap-2
                 h-12
