--- a/index.html
+++ b/index.html
@@ -170,7 +170,6 @@
 
 
 
-
         <a href="publications.html" class="
                         flex flex-row items-center
                         gap-1
@@ -188,7 +187,7 @@
 
           <iconify-icon class="group-hover:scale-125 transition-transform" icon="mingcute:science-fill" width="22">
           </iconify-icon>
-
+          <span>Publications</span>
 
         </a>
 
@@ -214,7 +213,7 @@
 
           <iconify-icon class="group-hover:scale-125 transition-transform" icon="mingcute:user-info-fill" width="22">
           </iconify-icon>
-
+          <span>About Me</span>
 
         </a>
 
@@ -277,7 +276,7 @@
 
 
 
-        <a href="" class="
+        <a href="index.html" class="
                         flex flex-row items-center
                         gap-1
                         hover:underline
@@ -295,8 +294,6 @@
           <iconify-icon class="group-hover:scale-125 transition-transform" icon="mingcute:home-2-fill" width="22">
           </iconify-icon>
           <span>Home Page</span>
-
-
 
         </a>
 
@@ -370,9 +367,7 @@
             ">
         <iconify-icon icon="mingcute:science-fill" width="22">
         </iconify-icon>
-        <p>
-
-        </p>
+        <span>Publications</span>
       </a>
 
 
@@ -390,9 +385,7 @@
             ">
         <iconify-icon icon="mingcute:user-info-fill" width="22">
         </iconify-icon>
-        <p>
-
-        </p>
+        <span>About Me</span>
       </a>
 
 
@@ -440,7 +433,7 @@
 
 
 
-      <a href="" class="
+      <a href="index.html" class="
                 flex flex-row items-center
                 gap-2
                 h-12
