--- a/publications.html
+++ b/publications.html
@@ -213,7 +213,7 @@
 
           <iconify-icon class="group-hover:scale-125 transition-transform" icon="mingcute:user-info-fill" width="22">
           </iconify-icon>
-
+          <span>About Me</span>
 
         </a>
 
@@ -274,7 +274,7 @@
 
 
 
-        <a href="" class="
+        <a href="index.html" class="
                         flex flex-row items-center
                         gap-1
                         hover:underline
@@ -292,6 +292,7 @@
           <iconify-icon class="group-hover:scale-125 transition-transform" icon="mingcute:home-2-fill" width="22">
           </iconify-icon>
           <span>Home Page</span>
+
         </a>
 
       </div>
@@ -364,9 +365,7 @@
             ">
         <iconify-icon icon="mingcute:science-fill" width="22">
         </iconify-icon>
-        <p>
-
-        </p>
+        <span>Publications</span>
       </a>
 
 
@@ -384,9 +383,7 @@
             ">
         <iconify-icon icon="mingcute:user-info-fill" width="22">
         </iconify-icon>
-        <p>
-
-        </p>
+        <span>About Me</span>
       </a>
 
 
@@ -432,7 +429,7 @@
       -->
 
 
-      <a href="" class="
+      <a href="index.html" class="
                 flex flex-row items-center
                 gap-2
                 h-12
