--- a/index.html
+++ b/index.html
@@ -769,8 +769,10 @@
 
               <div
                 class="post-excerpt post-content text-[var(--c-60)] text-sm line-clamp-5 border-b-1 border-[var(--c-sep)]">
-                <p><a target="_blank" rel="noopener"
-                    href="https://github.com/Bapiggott/DatasetCreationAndFineTuning">GitHub</a>
+                <p>
+                  <!--
+                  <a target="_blank" rel="noopener"
+                    href="https://github.com/Bapiggott/DatasetCreationAndFineTuning">GitHub</a>  -->
                   | <a href="static/file/ICCCN2024.pdf">Paper</a></p>
                 <p>This paper presents Aero-LLM, a framework using task-specific LLMs for secure
                   UAV communication and decision-making. It employs edge, cloud, and onboard computing to enhance
