--- a/index.html
+++ b/index.html
@@ -772,8 +772,8 @@
                 <p>
                   <!--
                   <a target="_blank" rel="noopener"
-                    href="https://github.com/Bapiggott/DatasetCreationAndFineTuning">GitHub</a>  -->
-                  | <a href="static/file/ICCCN2024.pdf">Paper</a></p>
+                    href="https://github.com/Bapiggott/DatasetCreationAndFineTuning">GitHub</a>  
+                  |  --><a href="static/file/ICCCN2024.pdf">Paper</a></p>
                 <p>This paper presents Aero-LLM, a framework using task-specific LLMs for secure
                   UAV communication and decision-making. It employs edge, cloud, and onboard computing to enhance
                   anomaly detection and mission efficiency through fine-tuned supervised and reinforcement learning.
