--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 
   <meta name="description"
-    content="I am a computer science student at Oakland University, focusing on advanced topics such as edge computing, data center architecture, and intelligent system optimization, where I actively contribute to innovative research and development.">
+    content="I am a computer science student at Oakland University, focusing on edge computing, UAV systems, large language models, and network security, where I actively contribute to innovative research and development.">
 
 
 
