--- a/about.html
+++ b/about.html
@@ -523,9 +523,7 @@
         <hr>
         <p>Hello,</p>
         <p>My name is Guohuan Feng.</p>
-        <p>I am a computer science student at Oakland University, focusing on advanced topics such as edge computing,
-          data center architecture, and intelligent system optimization, where I actively contribute to innovative
-          research and development.
+        <p>I am a computer science student at Oakland University, focusing on edge computing, UAV systems, large language models, and network security, where I actively contribute to innovative research and development
         </p>
         <p>
           <a href="static/file/cv.pdf" style="display: inline-flex; align-items: center; gap: 0;">
