--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
           <div class="description-container max-w-prose mx-auto grid grid-cols-1">
             <div class="text-left p-8">
               <p>
-                I am a computer science student at Oakland University, focusing on edge computing, UAV systems, large language models, and network security, where I actively contribute to innovative research and development.
+                I am a computer science student at Oakland University, focusing on edge computing, UAV systems, large language models, and network security, where I actively contribute to innovative research and software development.
               </p>
             </div>
           </div>
